--- a/html/operazioni.html
+++ b/html/operazioni.html
@@ -5,16 +5,16 @@
     <title>bee-market</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/products.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap-grid.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap-reboot.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/products.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="css/operazioni.css">
-    <link rel="stylesheet" type="text/css" href="css/watched.css">
+    <link rel="stylesheet" type="text/css" href="../css/operazioni.css">
+    <link rel="stylesheet" type="text/css" href="../css/watched.css">
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <link rel="stylesheet" type="text/css" href="css/rating.css">
+    <link rel="stylesheet" type="text/css" href="../css/rating.css">
 </head>
 
 <body>
@@ -662,11 +662,11 @@
     </footer>
     <!-- Footer -->
 
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/navbar.js"></script>
-    <script src="js/controlloInput.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script src="../js/bootstrap.js"></script>
+    <script src="../js/bootstrap.bundle.js"></script>
+    <script src="../js/navbar.js"></script>
+    <script src="../js/controlloInput.js"></script>
 </body>
 
 </html>
